<resources>
    <!--Activity/App Titles-->
    <string name="title_activity_add_option">Add Option</string>
    <string name="title_home">Home</string>
    <string name="title_templates">Templates</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_license">Open Source Libraries</string>
    <string name="title_projects">Projects</string>
    <string name="title_edit_project">Edit project</string>
    <string name="title_add_project">Add project</string>
    <string name="title_edit_option">Edit option</string>
    <string name="title_add_option">Add option</string>
    <string name="title_edit_requirement">Edit requirement</string>
    <string name="title_add_requirement">Add requirement</string>

    <string name="preference_file_key">com.bowtye.decisive.PREFERENCE_FILE_KEY</string>

    <!--Menu Strings-->
    <string name="menu_settings">Settings</string>
    <string name="menu_delete_project">Delete project</string>
    <string name="menu_save_title">Save</string>
    <string name="menu_reset_title">Reset</string>
    <string name="menu_delete_title">Delete</string>
    <string name="menu_from_template">From template</string>
    <string name="menu_new_project">New project</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_delete_option">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_edit_project">Edit project</string>
    <string name="menu_reset_tutorial">Reset Tutorial</string>

    <!--Labels-->
    <string name="label_choices">Choices:</string>
    <string name="label_type">Type</string>
    <string name="label_importance">Importance</string>
    <string name="label_expected">Expected:</string>
    <string name="label_has_price">Has price</string>
    <string name="label_empty_requirements">No requirements yet.</string>
    <string name="label_weight">Weight:</string>
    <string name="label_empty_options">No options in this project yet!</string>
    <string name="label_select_a_project">Select a project</string>
    <string name="label_widget_warning">Note: projects require at least two options to be used as a widget.</string>
    <string name="label_lowest">Lowest</string>
    <string name="label_highest">Highest</string>
    <string name="label_summary">Summary</string>
    <string name="label_requirements">Requirements</string>
    <string name="label_actual">Actual:</string>
    <string name="label_priority">Priority:</string>
    <string name="label_points_toward_total">Points toward total:</string>
    <string name="label_more_or_less_is_better">More or less is better</string>
    <string name="label_you_have_no_projects_yet">You have no projects yet!</string>
    <string name="label_expected_no_colon">Expected</string>
    <string name="label_requirement">Requirement</string>
    <string name="label_best_value_for_money">Best value for money</string>

    <!--Hints-->
    <string name="hint_requirement_name">Requirement name</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_expected">Expected value</string>
    <string name="hint_project_name">Project name</string>
    <string name="hint_value">Value</string>
    <string name="hint_option_name">Option name</string>
    <string name="hint_price">Price</string>
    <string name="hint_weight">Weight</string>
    <string name="hint_unit">Unit</string>

    <!--Button Labels-->
    <string name="button_take_photo">Take Photo</string>
    <string name="button_choose_image">Choose Image</string>
    <string name="button_remove_image">Remove Image</string>

    <!--Placeholders-->
    <string name="placeholder_item_name">Item Name</string>
    <string name="placeholder_price">$100 000</string>
    <string name="placeholder_requirement_label">Requirement:</string>
    <string name="placeholder_rating">4.78</string>
    <string name="placeholder_highest">Highest</string>
    <string name="placeholder_lowest">Lowest</string>
    <string name="placeholder_project_card_heading">Heading</string>
    <string name="placeholder_date">Date</string>
    <string name="placeholder_option_count">5</string>
    <string name="placeholder_requirement">Requirement</string>
    <string name="placeholder_high">High</string>
    <string name="placeholder_units">lbs</string>
    <string name="placeholder_best_value">Best value</string>
    <string name="placeholder_best_value_number">$340/</string>

    <!--Content Descriptions-->
    <string name="content_description_option_images">Option images</string>
    <string name="content_description_thumbs_up_or_down">Thumbs up or down</string>
    <string name="content_description_see_option_details_button">See option details button</string>
    <string name="content_description_expand_requirements_button">Expand requirements button</string>
    <string name="content_description_see_project_details_button">See project details button</string>
    <string name="content_description_project_picture">Project picture</string>
    <string name="content_description_requirement_expected_value_checkbox">Requirement expected value checkbox</string>
    <string name="content_description_requirement_good_or_bad_rating_arrow">Requirement good or bad rating arrow</string>
    <string name="content_description_requirement_details_arrow">Requirement details arrow</string>
    <string name="content_description_empty_requirements">Empty requirements</string>
    <string name="content_description_empty_projects">Empty projects</string>
    <string name="content_description_option_image_header">Option image header</string>
    <string name="content_description_empty_options">Empty options</string>
    <string name="content_description_email_and_password_background">Email and password background</string>
    <string name="content_description_rating_star">Rating star</string>
    <string name="content_description_requirement_checkmark">Requirement checkmark</string>

    <!--Dialog Messages-->
    <string name="dialog_leave_without_saving">Leave without saving?</string>
    <string name="dialog_title_save_option">Save Option</string>
    <string name="dialog_give_option_a_name">Please give this option a name</string>
    <string name="dialog_name_exists">Name already exists.</string>
    <string name="dialog_save_project">Save Project</string>
    <string name="dialog_give_project_a_name">Please give this project a name</string>
    <string name="dialog_add_a_requirement">Please add at least one requirement</string>
    <string name="dialog_keep_old_requirement_values">Keep already entered requirement values?</string>
    <string name="dialog_reset_tutorials">Tutorial messages reset</string>

    <!--Concatenations-->
    <string name="concatenation_value_unit">%s %s</string>
    <string name="concatenation_price_value">$%s</string>
    <string name="concatenation_name_colon">%s:</string>
    <string name="concatenation_value_for_money">$%s/</string>
    <string name="concatenation_username">Current user: %s</string>

    <!--Error Messages-->
    <string name="error_enter_weight">Enter a weight</string>
    <string name="error_empty_requirement_name">Give this requirement a name</string>
    <string name="error_unknown_date">Unknown date</string>

    <!--Preferences-->
    <string name="pref_open_source_libraries">Open Source Libraries</string>
    <string name="pref_reset_tutorials">Reset Tutorials</string>
    <string name="pref_key_open_source_license">license</string>
    <string name="pref_key_reset_tutorials">reset_tutorials</string>

    <!--Tutorial Messages-->
    <string name="showcase_title_new_project">New project</string>
    <string name="showcase_got_it">Got it</string>
    <string name="showcase_message_add_projects">Start by adding some projects!</string>
    <string name="showcase_title_templates">Templates</string>
    <string name="showcase_message_templates">Check out some templates here!</string>
    <string name="showcase_message_home">Projects you create will show up here!</string>
    <string name="showcase_title_home">Home</string>
    <string name="showcase_title_add_option">Add option</string>
    <string name="showcase_message_add_option">Add some options to this project here</string>
    <string name="showcase_title_detailed_ratings">Detailed Ratings</string>
    <string name="showcase_message_detailed_ratings">Click here to see a detailed rating breakdown!</string>
    <string name="showcase_message_templates_description">Templates are pre-made projects to give you some ideas on how to structure your own. You can also add these to your projects and customize them to your liking!</string>
    <string name="showcase_title_requirements">Requirements</string>
    <string name="showcase_message_requirements">Give this project some requirements. These will be used to calculate ratings for each option you add.</string>

</resources>
