<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="1"
        android:icon="@drawable/ic_account_circle_24dp"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="4"
        android:title="@string/menu_sign_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/menu_settings"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_reset_tutorial"
        android:orderInCategory="99"
        android:title="@string/menu_reset_tutorial"
        app:showAsAction="never"
        />

</menu>