<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_project_card_header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/card_project_header_height"
            android:layout_marginStart="@dimen/flat_card_edge_margin"
            android:layout_marginTop="@dimen/card_top_margin"
            android:layout_marginEnd="@dimen/flat_card_edge_margin"
            android:background="@drawable/bg_card"
            android:scaleType="centerCrop"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/backgrounds/scenic"
            android:contentDescription="@string/content_description_project_picture" />

        <TextView
            android:id="@+id/tv_project_card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/flat_card_edge_margin"
            android:layout_marginTop="@dimen/card_top_margin"
            android:text="@string/placeholder_project_card_heading"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_project_card_header" />

        <TextView
            android:id="@+id/label_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_heading_separation"
            android:layout_marginBottom="@dimen/card_bottom_margin"
            android:text="@string/label_choices"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_project_card_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_date" />

        <ImageView
            style="@style/MyArrowButtonStyle"
            android:layout_marginEnd="@dimen/flat_card_edge_margin"
            app:layout_constraintBottom_toBottomOf="@+id/label_choices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_project_card_title"
            android:contentDescription="@string/content_description_see_project_details_button" />

        <TextView
            android:id="@+id/tv_project_choices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_label_value_separation"
            android:text="@string/placeholder_option_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="@+id/label_choices"
            app:layout_constraintStart_toEndOf="@+id/label_choices"
            app:layout_constraintTop_toTopOf="@+id/label_choices" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_heading_separation"
            android:text="@string/placeholder_date"
            app:layout_constraintStart_toStartOf="@+id/tv_project_card_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_project_card_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
