<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/white"
    app:cardCornerRadius="@dimen/card_corner_radius"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_card">

        <TextView
            android:id="@+id/label_summary_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_summary"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/label_best_value_for_money"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/label_summary_title"
            app:layout_constraintLeft_toLeftOf="@id/label_summary_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            android:text="@string/label_best_value_for_money"
            />

        <TextView
            android:id="@+id/tv_best_value_for_money"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/placeholder_best_value"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toStartOf="@+id/tv_value_for_money"
            app:layout_constraintStart_toStartOf="@id/label_best_value_for_money"
            app:layout_constraintTop_toBottomOf="@id/label_best_value_for_money" />

        <TextView
            android:id="@+id/tv_value_for_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_best_value_number"
            app:layout_constraintBottom_toBottomOf="@id/tv_best_value_for_money"
            app:layout_constraintRight_toLeftOf="@id/iv_value_for_money_star"
            app:layout_constraintTop_toTopOf="@id/tv_best_value_for_money" />

        <ImageView
            android:id="@+id/iv_value_for_money_star"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_rating_star"
            android:src="@drawable/ic_star_24dp"
            android:tint="@color/colorPrimaryDark"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@id/tv_value_for_money"
            app:layout_constraintEnd_toEndOf="@+id/include_highest_rating"
            app:layout_constraintLeft_toRightOf="@id/tv_value_for_money"
            app:layout_constraintTop_toTopOf="@id/tv_value_for_money" />

        <TextView
            android:id="@+id/tv_highest_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/placeholder_highest"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toStartOf="@+id/include_highest_rating"
            app:layout_constraintStart_toStartOf="@+id/label_highest"
            app:layout_constraintTop_toBottomOf="@+id/label_highest" />

        <TextView
            android:id="@+id/tv_lowest_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/placeholder_lowest"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/include_highest_rating"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/label_lowest"
            app:layout_constraintTop_toBottomOf="@+id/label_lowest" />

        <include
            android:id="@+id/include_highest_rating"
            layout="@layout/layout_rating_with_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_highest_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_highest_name" />

        <include
            android:id="@+id/include_lowest_rating"
            layout="@layout/layout_rating_with_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_lowest_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_lowest_name" />

        <TextView
            android:id="@+id/label_highest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_highest"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/label_summary_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_best_value_for_money" />

        <TextView
            android:id="@+id/label_lowest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/label_lowest"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_highest_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_highest_name" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>